# accounts

./: Cargo.toml  README.md  justfile
.zed/: debug.json
accounts-daemon/: Cargo.toml
accounts-daemon/data/: cosmic-accounts.service
accounts-daemon/data/providers/: google.toml  microsoft.toml
accounts-daemon/src/: account.rs  auth.rs  error.rs  main.rs  storage.rs
accounts-daemon/src/models/: mod.rs
accounts-daemon/src/services/: calendar.rs  contacts.rs  factory.rs  mail.rs  mod.rs  todo.rs
accounts-ui/: Cargo.toml  README.md  justfile
accounts-ui/i18n/en/: accounts_ui.ftl
accounts-ui/i18n/pl/: accounts_ui.ftl
accounts-ui/resources/: app.desktop  app.metainfo.xml
accounts-ui/src/: app.rs  main.rs
cosmic-accounts-daemon/: Cargo.toml
cosmic-accounts-daemon/data/: cosmic-accounts.service
cosmic-accounts-daemon/src/: accounts.rs  auth.rs  config.rs  error.rs  main.rs  storage.rs
cosmic-accounts-daemon/src/models/: provider.rs
cosmic-accounts-gui/: Cargo.toml
cosmic-accounts-gui/src/: main.rs
cosmic-accounts-server/: Cargo.toml
cosmic-accounts-server/src/: main.rs
cosmic-accounts-ui/: Cargo.toml  README.md  justfile
cosmic-accounts-ui/i18n/en/: cosmic_accounts_ui.ftl
cosmic-accounts-ui/i18n/pl/: cosmic_accounts_ui.ftl
cosmic-accounts-ui/resources/: app.desktop  app.metainfo.xml
cosmic-accounts-ui/src/: app.rs  main.rs
data/providers/: github.toml  gitlab.toml  google.toml  microsoft.toml
src/: accounts.rs  auth.rs  client.rs  config.rs  error.rs  lib.rs  proxy.rs  service.rs  storage.rs  types.rs
src/clients/: account.rs  calendar.rs  mod.rs
src/interfaces/: accounts.rs  mod.rs
src/models/: account.rs  capability.rs  credentials.rs  mod.rs  provider.rs  service.rs
src/services/: calendar.rs  contacts.rs  factory.rs  mail.rs  mod.rs  todo.rs
src/types/: mod.rs  zbus.rs
