[package]
name = "cosmic-accounts"
version = "0.1.0"
edition = "2021"
authors = ["Eduardo Flores <edfloreshz@gmail.com>"]
description = "COSMIC online account management service"
repository = "https://github.com/cosmic-utils/cosmic-accounts"

[workspace]
members = ["cosmic-accounts-daemon", "cosmic-accounts-gui"]

[workspace.dependencies]
zbus = { version = "4.4.0", default-features = false, features = ["tokio"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
oauth2 = "4.4"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
keyring = "2.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.4"
toml = "0.8"

[dependencies]
zbus = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
oauth2 = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
keyring = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
toml = { workspace = true }
async-trait = "0.1.89"
