[package]
edition = "2024"
name = "accounts"
version = "0.1.0"
authors = ["Eduardo Flores <edfloreshz@gmail.com>"]
description = "Online account management service for the COSMIC desktop."
repository = "https://github.com/cosmic-utils/accounts"

[dependencies]
async-trait = "0.1.89"

[dependencies.chrono]
workspace = true

[dependencies.cosmic-config]
workspace = true

[dependencies.oauth2]
workspace = true

[dependencies.reqwest]
workspace = true

[dependencies.serde]
workspace = true

[dependencies.serde_json]
workspace = true

[dependencies.tokio]
workspace = true

[dependencies.tracing]
workspace = true

[dependencies.tracing-subscriber]
workspace = true

[dependencies.uuid]
workspace = true

[dependencies.zbus]
workspace = true

[workspace]
members = [
    "accounts-daemon",
    "accounts-ui",
]

[workspace.dependencies]
oauth2 = "4.4"
serde_json = "1.0"
thiserror = "1.0"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.4"

[workspace.dependencies.chrono]
version = "0.4"
features = ["serde", "clock"]

[workspace.dependencies.cosmic-config]
git = "https://github.com/pop-os/libcosmic"

[workspace.dependencies.reqwest]
version = "0.11"
features = ["json"]

[workspace.dependencies.secret-service]
version = "5.0.0"
features = ["rt-tokio-crypto-rust"]

[workspace.dependencies.serde]
version = "1.0"
features = ["derive"]

[workspace.dependencies.tokio]
version = "1.0"
features = ["full"]

[workspace.dependencies.uuid]
version = "1.0"
features = [
    "v4",
    "serde",
]

[workspace.dependencies.zbus]
version = "5.11.0"
features = ["tokio"]
default-features = false
