[package]
name = "accounts-daemon"
version = "0.1.0"
edition = "2024"
description = "Online accounts for COSMIC daemon service"

[dependencies]
accounts = { path = ".." }
zbus = { workspace = true }
axum = "0.8.4"
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
secret-service = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
oauth2 = { workspace = true }
reqwest = { workspace = true }
cosmic-config = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
async-trait = "0.1.89"

[[bin]]
name = "accounts-daemon"
path = "src/main.rs"
