[package]
name = "cosmic-accounts-daemon"
version = "0.1.0"
edition = "2021"
description = "COSMIC Online Accounts daemon service"

[dependencies]
cosmic-accounts = { path = ".." }
tokio = { version = "1.0", features = ["full"] }
zbus = "4.4.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[[bin]]
name = "cosmic-accounts-daemon"
path = "src/main.rs"
