[package]
name = "cosmic-accounts-daemon"
version = "0.1.0"
edition = "2021"
description = "COSMIC Online Accounts daemon service"

[dependencies]
cosmic-accounts = { path = ".." }
zbus = "4.4.0"
axum = "0.8.4"
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }


[[bin]]
name = "cosmic-accounts-daemon"
path = "src/main.rs"
