[package]
name = "cosmic-accounts-gui"
version = "0.1.0"
edition = "2021"
description = "COSMIC Online Accounts GUI application"

[dependencies]
cosmic-accounts = { path = ".." }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = {version = "0.3", features= ["env-filter"]}
url = "2.4"
zbus = { workspace = true }
open = "5.3.2"

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
default-features = false
features = ["tokio", "winit", "wgpu", "about"]

[[bin]]
name = "cosmic-accounts-gui"
path = "src/main.rs"
